# rust-sqlx-test

./: .env  Cargo.toml  Makefile  README.md
migrations/: 01.sql  20220224.sql
src/: main.rs
