[package]
edition = "2021"
name = "rust-sqlx-test"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.55"
async-std = {version = "1.10.0", features = ["attributes"]}
dotenv = "0.15.0"
sqlx = {version = "0.5.11", features = ["runtime-async-std-rustls", "postgres", "chrono", "json"]}
tokio = {version = "1.17.0", features = ["full"]}
